tour fix and tests refactoring - [FIX] tour did not restart correctly every time - [REFACTOR] tests refactor using a dictionary configuration - [PENDING] extensiveness fix for exclusivity (requires more debugging for side effects) - [PENDING] fallback score limit ​

--- a/lcmlutils/templates/lcmlutils/index.html
+++ b/lcmlutils/templates/lcmlutils/index.html
@@ -688,7 +688,8 @@
     tour.init();
 
     // Start the tour
-    tour.start();
+    tour.setCurrentStep(0);
+    tour.restart();
   };
   $("#lcmlutils-tour-btn").click(function() {
      setupTour(); 
