--- a/lcmlutils/templates/lcmlutils/index.html
+++ b/lcmlutils/templates/lcmlutils/index.html
@@ -150,14 +150,14 @@
               <select id="query-legend-combo-list" class="legends-combo-list">
               </select>
             </div>
-          </div>
-          <div class="row">
             <div class="col-md-1">
               Similarity threshold
             </div>
             <div class="col-md-2">
               <input id="similarity-threshold" type="number" value="50" placeholder="0 to 100" step="5" min="5" max="100">
             </div>
+          </div>
+          <div class="row">
             <div class="col-md-1">
               Similarity level
             </div>
@@ -165,6 +165,15 @@
               <select id="similarity-level-combo-list" class="similarity-combo-list">
                 <option value="basic-elements">Basic Elements only</option>
                 <option value="elements+props">Elements & Props</option>
+              </select>
+            </div>
+            <div class="col-md-1">
+              Phase 1 logic
+            </div>
+            <div class="col-md-2">
+              <select id="phase1-logic-combo-list" class="phasse1-logic-combo-list">
+                <option value="original">Standard</option>
+                <option value="variants">Variants</option>
               </select>
             </div>
             <div class="col-md-2">
@@ -717,6 +726,7 @@
     var qln = $("#query-legend-combo-list option:selected").text();
     var similarity_threshold = parseInt($('#similarity-threshold').val());
     var similarity_level = $('#similarity-level-combo-list option:selected').val();
+    var phase1_logic = $('#phase1-logic-combo-list option:selected').val();
     var json_config = 
       {
         "similarity_mode":"FULL_PROTOTYPE", 
@@ -725,7 +735,8 @@
         "working_legend_name": wln,
         "query_legend_name": qln,
         "advanced_options": {
-          "similarity_level": similarity_level
+          "similarity_level": similarity_level,
+          "phase1_logic": phase1_logic
         }
       };
     $.ajax(
